Migrate to ChatEvent
